Revert "fix: split header onto seperate lines on small screens"
This reverts commit d8a90168e58ef8d71f31f76d999d4f6a59232987.

--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -1,5 +1,5 @@
 .mat-toolbar {
-  min-height: 72px;
+  height: 72px;
   background-color: #F5F5F5;
 
   font-family: 'Grotesk';
